--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -16,7 +16,7 @@
 					<span class="login-form-title1">Seja Bem Vindo!</span>
 					<span class="login-form-title">Sua senha foi validada</span>
 					<span class="login-form-title">com sucesso</span>
-                    <span class="login-form-title2">Parabens!</span>
+                    <span class="login-form-title2">Parabéns!</span>
 					<div class="container-login-form-btn">
 						<button class="login-form-btn">Voltar para página inicial</button>
 					</div>
